--- a/pom.xml
+++ b/pom.xml
@@ -97,6 +97,7 @@
 	</dependencies>
 
 	<build>
+	  <finalName>web-services</finalName>  
 		<plugins>
 			<plugin>
 				<groupId>org.springframework.boot</groupId>
