--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,8 @@
 server.port=8080
 server.servlet.context-path=/Sindopan
 spring.jpa.hibernate.ddl-auto=update
-spring.datasource.url=jdbc:mysql://localhost:3306/sindopan?useUnicode=true&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=UTC
+#spring.datasource.url=jdbc:mysql://localhost:3306/sindopan?useUnicode=true&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=UTC
+spring.datasource.url=jdbc:mysql://192.168.1.3:3306/sindopan
 spring.datasource.username=root
 spring.datasource.password=
 spring.servlet.multipart.max-file-size=100MB
